--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@ p {
 /* Header Styling */
 header {
   background-color: #0d0d0d;
+  border-style:dotted;
+  border-color: #e44424;
+  border-width: 5px;
   padding: 1rem 2rem;
   position: sticky;
   top: 0;
@@ -394,10 +397,15 @@ margin: 1rem;
 .lab-header {
   text-align: center;
   padding: 3rem 2rem 2rem;
-  background: white;
   color: white;
-  border-radius: 12px;
   margin-bottom: 3rem;
+}
+
+.lab-header-gif img{
+  max-width: 400px;
+  max-height: 500px;
+  display: block;
+  margin: 0 auto;
 }
 
 .lab-header h1 {
@@ -415,10 +423,15 @@ margin: 1rem;
 .lab-content {
   max-width: 800px;
   margin: 0 auto 4rem;
+  color: #0d0d0d;
 }
 
+/* .lab-content h2{
+  color
+} */
+
 .learning-section {
-  background-color: white;
+  background-color: rgba(243, 235, 214, 0.8);
   padding: 2rem;
   margin-bottom: 2rem;
   border-radius: 8px;
@@ -514,11 +527,18 @@ margin: 1rem;
 }
 
 .lab-reflection p {
-  line-height: 1.8;
-  margin-bottom: 1rem;
+  line-height: 1.3;
+  margin-bottom: 2rem;
   color: #555;
 }
 
 .lab-reflection p:last-child {
   margin-bottom: 0;
+}
+
+.clown-gif img{
+  max-width: 800px;
+  max-height: 500px;
+  display: block;
+  margin: 0 auto;
 }
