--- a/style.css
+++ b/style.css
@@ -445,8 +445,9 @@ margin: 1rem;
 }
 
 .lab-header-gif img{
-  max-width: 400px;
-  max-height: 500px;
+  /* max-width: 400px;
+  max-height: 500px; */
+  max-width: 30%;
   display: block;
   margin: 0 auto;
   padding-bottom: 2rem;
@@ -461,7 +462,7 @@ margin: 1rem;
 
 @media (max-width: 768px){
   .lab-header-gif img{
-    max-width: 90%;
+    max-width: 50%;
     /* margin-bottom: 0rem; */
   }
   
@@ -494,11 +495,12 @@ margin: 1rem;
 
 .learning-section {
   background-color: #e7d8ae;
-  padding: 16px;
+  padding: 30px;
   column-gap: 16px;
   border: var(--border-style);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   width: 100%;
+  margin: 0 auto;
 }
 
 .learning-section h2 {
@@ -571,6 +573,7 @@ margin: 1rem;
   width: 100%;
   object-fit: cover;
   display: block;
+  margin: 0 auto;
 }
 
 .screenshot-grid figcaption {
@@ -608,8 +611,7 @@ margin: 1rem;
 }
 
 .clown-gif img{
-  max-width: 800px;
-  max-height: 500px;
+  max-width: 50%;
   display: block;
   margin: 0 auto;
 }
@@ -618,6 +620,7 @@ margin: 1rem;
   display: flex;
   flex-direction:row;
   justify-content: space-between;
+  margin: 1rem auto;
 }
 
 .lab-gallery {
@@ -677,6 +680,11 @@ margin: 1rem;
 
   .lab-images h2{
     font-size: var(--main-font-size);
+    line-height: var(--main-line-height);
+  }
+
+  .lab-gallery-title h2 {
+     font-size: var(--main-font-size);
     line-height: var(--main-line-height);
   }
 
@@ -760,4 +768,20 @@ margin: 1rem;
 
 .lab-question p{
   font-size: 0.1rem;
+}
+
+.tech-experiment-pic img{
+  width: 500px;
+  display: block;
+  margin: 1rem 1rem;
+  border: var(--border-style);
+  background-color: var(--off-white);
+}
+
+/* Tech entry media queries */
+@media (max-width: 768px) {
+
+  .tech-experiment-pic img{
+    width: 60%;
+  }
 }
